--- a/teamversus/src/main/resources/templates/listaPokemon.html
+++ b/teamversus/src/main/resources/templates/listaPokemon.html
@@ -4,192 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="icon" type="image/x-icon" href="/images/pokeball_teamversus.png">
 	<title>Construir Equipo</title>
 
-	<!-- Agregar las referencias a Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-	<!-- Agregar las referencias a Font Awesome para los iconos -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
-	<style>
-		.container-main {
-			float: bottom;
-			border-top: 5px solid white;
-			margin-bottom: 50px;
-			padding-top: 40px;
-		}
-
-		.container-team {
-			float: top;
-			margin-bottom: 40px;
-		}
-
-		.team-cell {
-			margin-bottom: 15px;
-		}
-
-		body {
-			background: linear-gradient(to right, rgb(36, 52, 200), #9b59b6);
-			font-family: 'Candara', sans-serif;
-			color: white;
-		}
-
-		h2 {
-			font-size: 50px;
-			text-align: center;
-		}
-
-		.pokemon-name {
-			font-size: 26px;
-		}
-
-		.pokemon-card {
-			background-color: rgb(64, 0, 128, 0.5);
-			border-radius: 5px;
-			text-align: center;
-			padding: 15px;
-			margin: 15px;
-			height: 350px;
-			position: relative;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-		}
-
-		.pokemon-info {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			flex-grow: 1;
-		}
-
-		.pokemon-image-container {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			flex-grow: 1;
-		}
-
-		.pokemon-image {
-			max-width: 100%;
-			max-height: 100%;
-			border-radius: 10px;
-			object-fit: contain;
-		}
-
-		.pokemon-types {
-			font-weight: bold;
-		}
-
-		.type-container {
-			width: 100px;
-			display: inline-block;
-		}
-
-		.row {
-			margin-right: -5px;
-			margin-left: -5px;
-		}
-
-		.col-md-4 {
-			padding-right: 5px;
-			padding-left: 5px;
-		}
-
-		.btn {
-			background: linear-gradient(to right, rgb(36, 52, 200), #9b59b6);
-			color: white;
-		}
-
-		.btn-combate-container {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			margin-bottom: 55px;
-		}
-
-		.btn-combate {
-			padding: 15px 30px;
-			background: linear-gradient(to right, rgb(36, 52, 200), #9b59b6);
-			font-family: 'Candara', sans-serif;
-			font-size: 30px;
-		}
-	</style>
-
-	<script>
-		document.addEventListener("DOMContentLoaded", function () {
-			var pokemonTypes = document.querySelectorAll('.pokemon-types');
-
-			pokemonTypes.forEach(function (element) {
-				var tipos = element.textContent.split('/');
-
-				// Limpiar el contenido existente
-				element.innerHTML = '';
-
-				tipos.forEach(function (tipo) {
-					var color = getColorByType(tipo.toLowerCase());
-
-					// Crear un nuevo elemento span para cada tipo
-					var tipoElement = document.createElement('span');
-					tipoElement.textContent = tipo;
-					tipoElement.style.backgroundColor = color;
-					tipoElement.style.borderRadius = '15px';
-					tipoElement.style.padding = '5px';
-					tipoElement.style.margin = '5px';
-					tipoElement.classList.add('type-container');
-
-					// Agregar el nuevo elemento span al contenedor
-					element.appendChild(tipoElement);
-				});
-			});
-
-			function getColorByType(tipo) {
-				switch (tipo) {
-					case 'planta':
-						return '#78C850';
-					case 'fuego':
-						return '#F08030';
-					case 'agua':
-						return '#6890F0';
-					case 'bicho':
-						return '#A8B820';
-					case 'veneno':
-						return '#A040A0';
-					case 'normal':
-						return '#A8A878';
-					case 'volador':
-						return '#A890F0';
-					case 'eléctrico':
-						return '#F8D030';
-					case 'hada':
-						return '#EE99AC';
-					case 'lucha':
-						return '#C03028';
-					case 'roca':
-						return '#B8A038';
-					case 'psíquico':
-						return '#F85888';
-					case 'acero':
-						return '#B8B8D0';
-					case 'tierra':
-						return '#E0C068';
-					case 'hielo':
-						return '#98D8D8';
-					case 'fantasma':
-						return '#705898';
-					case 'dragón':
-						return '#7038F8';
-					case 'siniestro':
-						return '#705848';
-					default:
-						return 'transparent';
-				}
-			}
-		});
-	</script>
-
+	<link rel="stylesheet" href="/css/listaPokemon.css">
+	<script src="/js/listaPokemon.js"></script>
 </head>
 
 <body>
@@ -224,7 +47,7 @@
 	</div>
 
 	<div class="container container-main mt-5">
-		<h2>Lista de Pokémon</h2>
+		<h2>Lista de Pokemon</h2>
 		<div class="row">
 			<div th:each="pokemon : ${listaPokemon}" class="col-md-4 mb-3">
 				<div class="card pokemon-card">
